# SPL-assignment---Restaurant

./: CMakeLists.txt  makefile
include/: Action.h  Customer.h  Dish.h  Restaurant.h  Table.h
src/: Action.cpp  AlchoholicCustomer.cpp  CheapCustomer.cpp  Customer.cpp  Dish.cpp  Restaurant.cpp  SpicyCustomer.cpp  Table.cpp  VegetarianCustomer.cpp
